k8s/cms-api-svc.yaml
apiVersion: v1
kind: Service
metadata: 
    name: cms-api-svc
    namespace: cms-prod
spec: 
  type: ClusterIP
  ports: 
    - port: 3000 #allow other pods access to this pod
      targetPort: 3000 #the target port of the containter
  selector: 
    component: cms-api
