k8s/cms-api-ingress-svc.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cms-api-ingress-svc
  namespace: cms-api-namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec: 
  rules:
    - http:
        paths:
          - path: /dte-partner/?(.*)
            backend:
              serviceName: cms-api-svc
              servicePort: 3000
